[project]
name = "apiary-network"
version = "0.1.0"
description = "A multi-agent ADK system that helps a backyard beekeeper log inspections, get safety-checked treatment advice, and review hive history."
requires-python = ">=3.11"
dependencies = [
  "google-adk>=2.3.0",
  "mcp>=1.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyyaml>=6.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
